k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rdas
  labels:
    app.kubernetes.io/part-of: reference-data-aggregation-service
