k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdas-app
  namespace: rdas
  labels:
    app: rdas-app
spec:
  type: ClusterIP
  selector:
    app: rdas-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
